# tux-plus-plus

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/cogs/: command.hpp
src/cogs/createsnippets/: createsnippets.cpp
src/cogs/ping/: ping.cpp  ping.hpp
src/cogs/snippets/: snippets.cpp
src/cogs/tux_help/: help.cpp
